@@ -1,2 +1,1 @@
-<%use_vars FOO %>
-<%= FOO %>
+<%= $FOO %>
